# raspimouse_cartographer

./: CMakeLists.txt  README.md  package.xml
config/: backpack_2d.lua  config.rviz  trajectory_builder_2d.lua
launch/: slam.launch  slam_remote_desktop.launch  slam_remote_robot.launch  slam_remote_robot_and_pc.launch  slam_stand_alone.launch
launch/trash/: extract_map_and_trajectory.launch  slam_remote_desktop.launch
scripts/: keyboard_cmd_vel.py  motors.py
src/: .trajectory_extractor.cpp.swp  trajectory_extractor.cpp
