<?xml version="1.0"?>
<package>
  <name>raspimouse_cartographer</name>
  <version>0.0.1</version>
  <description>The raspimouse_cartographer package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ryuichiueda@gmail.com">Ryuichi Ueda</maintainer>


  <license>Apache 2.0</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/raspimouse_cartographer</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <build_depend>roscpp</build_depend>
  <build_depend>raspimouse_ros_2</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>raspimouse_ros_2</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
